# mophoAgent

./: .gitignore  GEMINI.md  README.md
phone-agent/: .gitignore  README.md  main.py  pyproject.toml  tool_registry.py
phone-agent/config/: command_blocklist.txt  rish_blocklist.txt  scheduler_tasks.json  settings.py
phone-agent/ingest/: __init__.py  capture_trigger.py  layout.py  store.py
phone-agent/msgqueue/: delivery.py  manager.py
phone-agent/npu/: __init__.py  bridge.py  models.py  ocr_engine.py  queue.py
phone-agent/offline/: detector.py  mode.py
phone-agent/pipeline/: __init__.py  audio_transcript.py  executor.py  extract_html.py  format.py  image_ocr.py  share_extract.py
phone-agent/scheduler/: __init__.py  conditions.py  engine.py  tasks.py  triggers.py
phone-agent/scripts/: bootstrap.sh  phase6-gate.sh  phase7-gate.sh  run.sh  verify.sh  watchdog-install.sh  watchdog.sh
phone-agent/sensors/: activity.py  geofence.py
phone-agent/tests/: test_activity.py  test_geofence.py  test_ingest.py  test_queue.py  test_router.py  test_scheduler.py  test_session.py  test_sys_blocklist.py  test_triggers.py  test_tts.py
phone-agent/tools/: capture_audio.py  capture_common.py  capture_image.py  capture_screenshot.py  capture_share.py  classify.py  embed.py  health.py  infer.py  ingest_fetch.py  ingest_list.py  ocr.py  pipeline_trigger.py  queue_clear_failed.py  queue_common.py  queue_deliver.py  queue_sync.py  scheduler_add_task.py  scheduler_common.py  scheduler_remove_task.py  scheduler_start.py  scheduler_status.py  scheduler_stop.py  sensor_common.py  (+15 more)
(+80 files in other folders)
