[project]
name = "phone-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "uvicorn",
    "pydantic>=2.0",
    "httpx",
    "Pillow>=10.0",
    "numpy>=1.26",
    # needs libsndfile: pkg install libsndfile
    "soundfile>=0.13",
    # onnxruntime (OCR + Silero VAD) is not pip-installable on bionic;
    # provided via Termux/TUR package — see phase-1 notes.
]
